--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "^16.1.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.3"
   }
 }
